<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="800dp"
    android:layout_height="388dp"
    tools:context=".pages.EnvironmentFragment">
    
    <Button
        android:id="@+id/btnConfig"
        android:layout_width="320dp"
        android:layout_height="116dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:text="@string/configButton"
        android:textSize="32sp"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:background="@drawable/shape_btn_white_stroke_blue_rounded"
        app:backgroundTint="@null"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnWebSocket"
        android:layout_width="320dp"
        android:layout_height="116dp"
        android:layout_marginEnd="20dp"
        android:text="@string/webSocketButton"
        android:textSize="32sp"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:background="@drawable/shape_btn_white_stroke_blue_rounded"
        app:backgroundTint="@null"
        app:layout_constraintLeft_toRightOf="@id/btnConfig"
        app:layout_constraintTop_toTopOf="@id/btnConfig"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btnControl"
        android:layout_width="320dp"
        android:layout_height="116dp"
        android:layout_marginTop="10dp"
        android:text="@string/controlButton"
        android:textSize="32sp"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:background="@drawable/shape_btn_white_stroke_blue_rounded"
        app:backgroundTint="@null"
        app:layout_constraintLeft_toLeftOf="@id/btnConfig"
        app:layout_constraintTop_toBottomOf="@id/btnConfig" />


    <Button
        android:id="@+id/btnMember"
        android:layout_width="320dp"
        android:layout_height="116dp"
        android:text="@string/userInfoButton"
        android:textSize="32sp"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:background="@drawable/shape_btn_white_stroke_blue_rounded"
        app:backgroundTint="@null"
        app:layout_constraintLeft_toLeftOf="@id/btnWebSocket"
        app:layout_constraintTop_toTopOf="@id/btnControl" />

    <Button
        android:id="@+id/btnUi"
        android:layout_width="320dp"
        android:layout_height="116dp"
        android:layout_marginTop="10dp"
        android:text="@string/uiButton"
        android:textSize="32sp"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:background="@drawable/shape_btn_white_stroke_blue_rounded"
        app:backgroundTint="@null"
        app:layout_constraintLeft_toLeftOf="@id/btnControl"
        app:layout_constraintTop_toBottomOf="@id/btnControl" />
    
    <Button
        android:id="@+id/btnExit"
        android:layout_width="320dp"
        android:layout_height="116dp"
        android:text="@string/exitButton"
        android:textSize="32sp"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:background="@drawable/shape_btn_white_stroke_blue_rounded"
        app:backgroundTint="@null"
        app:layout_constraintLeft_toLeftOf="@id/btnMember"
        app:layout_constraintTop_toTopOf="@id/btnUi" />

</androidx.constraintlayout.widget.ConstraintLayout>