<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="800dp"
    android:layout_height="388dp"
    tools:context=".pages.MessageYesNoFragment">

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stopMessage"
        android:textSize="34sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ani_loading"
        android:importantForAccessibility="no"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="230dp"
        android:layout_marginStart="85dp"
        android:text="@string/btn_Cancel"
        android:textSize="32sp"
        android:textColor="@color/primary"
        android:background="@drawable/selector_default_btn"
        app:backgroundTint="@null"
        app:layout_constraintLeft_toLeftOf="@id/txtMessage"
        app:layout_constraintTop_toBottomOf="@id/txtMessage"/>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginStart="30dp"
        android:text="@string/btn_confirm"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:background="@drawable/shape_btn_blue"
        app:backgroundTint="@null"
        app:layout_constraintLeft_toRightOf="@id/btnCancel"
        app:layout_constraintTop_toTopOf="@id/btnCancel" />

</androidx.constraintlayout.widget.ConstraintLayout>