<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="800dp"
    android:layout_height="388dp"
    tools:context=".pages.ChargingFinishFragment">

    <TextView
        android:id="@+id/txtChargingFinishMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finishNotification"
        android:textSize="34sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 1. 배경용 -->
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBackground"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:progress="100"
        app:indicatorSize="250dp"
        app:trackThickness="20dp"
        app:indicatorColor="#EEEEEE"
        app:layout_constraintTop_toTopOf="@id/progressCircular"
        app:layout_constraintBottom_toBottomOf="@id/progressCircular"
        app:layout_constraintStart_toStartOf="@id/progressCircular"
        app:layout_constraintEnd_toEndOf="@id/progressCircular" />

    <!-- 2. 실제 게이지 -->
    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressCircular"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginStart="20dp"
        android:progress="60"
        app:indicatorSize="260dp"
        app:trackThickness="32dp"
        app:indicatorColor="@color/primary"
        app:trackCornerRadius="6dp"
        app:trackColor="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/txtChargingFinishMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/txtSoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="60%"
        android:textSize="64sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/progressCircular"
        app:layout_constraintStart_toStartOf="@id/progressCircular"
        app:layout_constraintEnd_toEndOf="@id/progressCircular"
        app:layout_constraintBottom_toBottomOf="@id/progressCircular"/>

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"
        android:text="@string/chargeInfo"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/progressCircular"
        app:layout_constraintTop_toBottomOf="@id/txtChargingFinishMessage" />

    <View
        android:id="@+id/viewLine"
        android:layout_width="400dp"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@color/primary"
        app:layout_constraintStart_toStartOf="@id/textViewInfo"
        app:layout_constraintTop_toBottomOf="@id/textViewInfo" />

    <TextView
        android:id="@+id/txtChargingAmtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/chargeOfAmount"
        android:textSize="22sp"
        android:textColor="@color/black_500"
        app:layout_constraintStart_toStartOf="@id/viewLine"
        app:layout_constraintTop_toBottomOf="@id/viewLine" />

    <TextView
        android:id="@+id/txtAmountOfCharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10.00 kWh"
        android:textSize="26sp"
        android:textColor="@color/black_800"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/viewLine"
        app:layout_constraintTop_toTopOf="@id/txtChargingAmtTitle"
        app:layout_constraintBottom_toBottomOf="@id/txtChargingAmtTitle" />

    <TextView
        android:id="@+id/txtTimeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/chargingTime"
        android:textSize="22sp"
        android:textColor="@color/black_500"
        app:layout_constraintStart_toStartOf="@id/viewLine"
        app:layout_constraintTop_toBottomOf="@id/txtChargingAmtTitle"/>

    <TextView
        android:id="@+id/txtChargeTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00:00"
        android:textSize="26sp"
        android:textColor="@color/black_800"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/viewLine"
        app:layout_constraintTop_toTopOf="@id/txtTimeTitle"
        app:layout_constraintBottom_toBottomOf="@id/txtTimeTitle"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/txtAmtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/chargeAmount"
        android:textSize="22sp"
        android:textColor="@color/black_500"
        app:layout_constraintStart_toStartOf="@id/viewLine"
        app:layout_constraintTop_toBottomOf="@id/txtTimeTitle" />

    <TextView
        android:id="@+id/txtChargePay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="120,999 원"
        android:textSize="26sp"
        android:textColor="@color/black_800"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/viewLine"
        app:layout_constraintTop_toTopOf="@id/txtAmtTitle"
        app:layout_constraintBottom_toBottomOf="@id/txtAmtTitle"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btnStopConfirm"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btn_confirm"
        android:textSize="28sp"
        android:background="@drawable/shape_btn_blue"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@id/viewLine"/>

</androidx.constraintlayout.widget.ConstraintLayout>