<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="800dp"
    android:layout_height="388dp"
    tools:context=".pages.CreditCardFragment">

    <TextView
        android:id="@+id/txtPlugWaitMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/creditCardMessage"
        android:textSize="34sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewCreditCardSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/creditCardTaggingSubMessage"
        android:textSize="22sp"
        android:textColor="@color/black_500"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/textViewLine"
        android:layout_width="280dp"
        android:layout_height="3.5dp"
        android:layout_marginTop="120dp"
        android:layout_marginStart="20dp"
        android:background="@color/primary"
        app:layout_constraintTop_toBottomOf="@+id/txtPlugWaitMessage"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:textSize="28sp"
        android:text="@string/rechargeUnitPrice"
        app:layout_constraintStart_toStartOf="@id/textViewLine"
        app:layout_constraintBottom_toTopOf="@id/textViewLine"/>

    <TextView
        android:id="@+id/txtInputAmt"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:gravity="right"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@id/txtPay"
        app:layout_constraintBottom_toBottomOf="@+id/txtPay"
        tools:ignore="RtlHardcoded,SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imgCardSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="30dp"
        android:importantForAccessibility="no"
        android:src="@drawable/card_to_reader_background"
        app:layout_constraintLeft_toRightOf="@id/txtInputAmt"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPlugWaitMessage"/>

    <ImageView
        android:id="@+id/imgCreditCardTagging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:background="@drawable/creditcardtagging"
        app:layout_constraintLeft_toLeftOf="@id/imgCardSpinner"
        app:layout_constraintTop_toTopOf="@id/imgCardSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout >